--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <h2>Space Grabbers NASA Earth</h2>
+
+
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
 <script type="importmap">
   {
@@ -15,3 +28,5 @@
   const scene = new THREE.Scene();
 
 </script>
+</body>
+</html>
