--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 			import * as THREE from 'three';
 
-			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
+			import { GUI } from './libs/lil-gui.module.min.js';
 
-			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-			import { LightProbeGenerator } from 'three/addons/lights/LightProbeGenerator.js';
+			import { OrbitControls } from './controls/OrbitControls.js';
+			import { LightProbeGenerator } from './lights/LightProbeGenerator.js';
 
 			let mesh, renderer, scene, camera;
 
