--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	</head>
 
 	<body>
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - light probe
-		</div>
+		<div id="info>
+Created by Space Grabbers. View the code on <a href="https://github.com/Space-Grabbers/nasa-earth"> GitHub </a>
+</div>
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
